# aoc-2024

./: Cargo.toml
days/day1/: Cargo.toml
days/day1/src/: lib.rs
days/day10/: Cargo.toml
days/day10/src/: lib.rs
days/day2/: Cargo.toml
days/day2/src/: lib.rs  main.rs
days/day3/: Cargo.toml
days/day3/src/: lib.rs  main.rs
days/day4/: Cargo.toml
days/day4/src/: lib.rs  main.rs
days/day5/: Cargo.toml
days/day5/src/: lib.rs  main.rs
days/day6/: Cargo.toml
days/day6/src/: lib.rs
days/day7/: Cargo.toml
days/day7/src/: lib.rs
days/day8/: Cargo.toml
days/day8/src/: lib.rs  test_1.txt
days/day9/: Cargo.toml
days/day9/src/: lib.rs
src/: main.rs
